# Discord-Email-OTP-Bruteforce

./: .gitignore  README.md
main/: Cargo.toml
main/src/: main.rs
main/src/make_config_file/: mod.rs
