[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
clearscreen = "4.0.6"
directories = "6.0.0"
ftail = "0.3.1"
log = "0.4.29"
rand = "0.10.0"
rand_regex = "0.19.0"
rand_xorshift = "0.5.0"
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
thirtyfour = "0.36.1"
tokio = { version = "1.50.0", features = ["full"] }
